<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/preferences_action_bar_container"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/preferences_action_bar_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:paddingLeft="16dp"
        android:paddingRight="15dp"
        android:paddingTop="15.5dp"
        android:paddingBottom="15.5dp"
        android:layout_gravity="left|center"
        android:layout_weight="0"
        android:scaleType="fitCenter"
        android:background="#0000"
        android:src="@drawable/ic_action_arrow_back_white"
        android:contentDescription="@string/action_bar_back_content_desc"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <uk.me.lewisdeane.urbandictionary.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:gravity="left|bottom"
            android:singleLine="true"
            app:font="Roboto-Medium.ttf"/>

        <uk.me.lewisdeane.urbandictionary.CustomTextView
            android:id="@+id/preferences_action_bar_header"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/settings"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:gravity="left|top"/>
    </LinearLayout>

</LinearLayout>