<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/action_bar_container"
    android:layout_width="56dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActionBarFragment">

    <LinearLayout
        android:id="@+id/action_bar_search_off"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="6dp">

        <ImageButton
            android:id="@+id/action_bar_toggle"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="left|center"
            android:layout_weight="0"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/ic_action_menu_white"
            android:contentDescription="@string/action_bar_toggle_content_desc"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="21dp"
            android:orientation="vertical">

            <uk.me.lewisdeane.urbandictionary.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:text="@string/app_name"
                android:textSize="20sp"
                android:textColor="#FFF"
                android:gravity="left|bottom"
                android:singleLine="true"
                app:font="Roboto-Medium.ttf"/>

            <uk.me.lewisdeane.urbandictionary.CustomTextView
                android:id="@+id/action_bar_header"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_weight="1"
                android:text="@string/heading_section1"
                android:textSize="16sp"
                android:textColor="#FFF"
                android:gravity="left|top"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/action_bar_refresh"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="right|center"
            android:layout_weight="0"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/ic_action_loop_white"/>

        <ImageButton
            android:id="@+id/action_bar_search_icon"
            android:layout_width="56dp"
            android:layout_height="55dp"
            android:layout_gravity="right|center"
            android:layout_weight="0"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingRight="16dp"
            android:paddingLeft="15dp"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/ic_action_search_white"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/action_bar_search_on"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:visibility="gone">

        <ImageButton
            android:id="@+id/action_bar_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="left|center"
            android:layout_weight="0"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/ic_action_arrow_back_white"/>

        <uk.me.lewisdeane.urbandictionary.CustomEditText
            android:id="@+id/action_bar_search_box"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left|center"
            android:layout_weight="1"
            android:paddingLeft="31dp"
            android:gravity="left|center"
            android:singleLine="true"
            android:background="#0000"
            android:textSize="20sp"
            android:textColor="#FFF"
            android:textColorHint="#FFF"
            android:hint="@string/action_bar_search_hint"/>

        <ImageButton
            android:id="@+id/action_bar_mic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="right|center"
            android:layout_weight="0"
            android:scaleType="fitCenter"
            android:background="#0000"
            android:src="@drawable/ic_action_mic_white"/>
    </LinearLayout>

</LinearLayout>